--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,8 @@
     display: flex;
     flex-direction: column;
 }
+
+.folder > div > button {
+    font-size: 15px;
+    background-color: white;
+}
