--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,23 @@
     font-size: 15px;
     background-color: white;
 }
+
+.inputContainer {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.inputContainer > span {
+    margin-top: 5px;
+}
+
+.inputContainer_input {
+    margin: 6px 0 0px 0;
+    padding: 5px;
+    display: flex;
+    border: 1px solid lightgray;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
